Updated styling on timetable details to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,14 @@ nav li {
   text-decoration: underline;
 }
 
+.image-2 {
+  background: url(../images/childrens-group-2-min.jpg);
+  background-position: center;
+  width: 300px;
+  height: 290px;
+  margin: 1rem auto;
+}
+
 .image-3 {
   background: url(..//images/group-shot-3.jpg);
   background-position: center;
@@ -200,6 +208,9 @@ nav li {
     font-size: 21px;
     padding-bottom: 7px;
     padding-top: 7px;
+    list-style-type: none;
+    margin-left: 30px;
+    margin-right: 30px;
   } 
 
 
@@ -322,15 +333,6 @@ footer {
     font-size: 20px;
   }
 
-/* Class Group styling to stack on tablet screens */
-  .grouped-classes {
-    display: flex; 
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 1em;
-    padding: 0.5em;
-  }
-
   .grouped-classes h3 {
     font-size: 36px;
   }
@@ -339,15 +341,27 @@ footer {
     margin-left: 2px;
     margin-right: 2px;
     text-align: center; 
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
   }
 
   /* Make images on classes page responsive to screen size */
+  
+  .image-2 {
+    width: 401px;
+  }
+
   .image-3 {
     width: 401px;
   }
 
   .image-4 {
     width: 401px;
+  }
+
+  #timetable li.details {
+    margin-left: 10em;
+    margin-right: 10em;
   }
 
   /* Footer styling to make font and icons larger on tablet screens */
@@ -412,6 +426,20 @@ footer {
   #numbers p {
     margin-top: 21px;
     margin-right: 35px;
+  }
+
+  /* Class Group styling to stack on 1200px screens */
+  .grouped-classes {
+    display: flex; 
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 1em;
+    padding: 0.5em;
+  }
+
+  #timetable li.details {
+    margin-left: 3em;
+    margin-right: 3em;
   }
 
   /* Footer styling to increase font size */
